<resources>
    <string name="filter_view_example_gizmos">abc</string>
    <string name="default_notification_channel_id">999</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="app_name">LD Mobile</string>
    <string name="channel_name">Phone Store Notification</string>
    <string name="channel_description">Notification of me</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="select_color">Chọn màu</string>
    <string name="facebook_app_id">562399965145325</string> <string name="fb_login_protocol_scheme">fb562399965145325</string>
    <string name="nhap_password_moi">Nhập password mới</string>
    <string name="xac_nhan_password">Xác nhận password</string>
    <string name="thay_doi">Thay đổi</string>
    <string name="nhap_email">Nhập email</string>
    <string name="tim">Tìm</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nhap_password">Nhập password</string>
    <string name="nhap_password_new">Nhập password mới</string>
    <string name="nhap_password_old">Nhập password cũ</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="dang_nhap_voi_facebook">Đăng nhập với facebook</string>
    <string name="ban_chua_co_tai_khoan">Bạn chưa có tài khoản?</string>
    <string name="dang_ki_ngay">Đăng kí ngay</string>
    <string name="ghi_nho_dang_nhap">Ghi nhớ đăng nhập</string>
    <string name="ho_ten">Họ tên</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="dong_y_chinh_sach">Đồng ý với chính sách của chúng tôi</string>
    <string name="chon_tu_thu_vien">Chọn từ thư viện</string>
    <string name="chup_anh">Chụp ảnh</string>
    <string name="save">Lưu</string>
    <string name="name">Tên</string>
    <string name="sdt">SDT</string>
    <string name="coming_soon">Coming soon</string>
    <string name="tong_cong">Tổng cộng:</string>
    <string name="tiep_tuc">Tiến hành đặt hàng</string>
    <string name="no_product_in_cart">Không có sản phẩm nào trong giỏ hàng</string>
    <string name="mo_hop_kiem_tra_nh_n_h_ng">Mở hộp kiểm tra nhận hàng</string>
    <string name="doi_tra_trong_30_ngay_neu_sp_loi">Đổi trả trong 30 ngày nếu sp lỗi</string>
    <string name="san_pham_lien_quan">Sản phẩm khác của hãng</string>
    <string name="thong_so_ki_thuat">Thông số kỹ thuật</string>
    <string name="bo_nho_trong">Bộ nhớ trong:</string>
    <string name="danh_gia_va_nhan_xet">Đánh giá và Nhận xét</string>
    <string name="chua_co_danh_gia_nao">Chưa có đánh giá nào</string>
    <string name="gui_danh_gia">Gửi đánh giá</string>
    <string name="nhap_nhan_xet_cua_ban">Nhập nhận xét của bạn....</string>
    <string name="gui">Gửi</string>
    <string name="them_vao_gio_hang">Thêm vào giỏ hàng</string>
    <string name="mua_ngay">Mua Ngay</string>
    <string name="xem_tat_ca">Xem tất cả</string>
    <string name="hoan_tien_100_neu_gia">Hoàn tiền 100% nếu giả</string>
    <string name="hot_sale">KHUYẾN MÃI HOT </string>
    <string name="goi_y_cho_ban">Gợi ý cho bạn</string>
    <string name="sap_xep">Sắp xếp</string>
    <string name="theo_doi_don_hang">Theo dõi đơn hàng</string>
    <string name="ho_tro">Hỗ trợ</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="kien_hang_cua_ban">Kiện hàng của bạn</string>
    <string name="giao_hang_nhanh">Giao hàng nhanh</string>
    <string name="free_ship">Free ship</string>
    <string name="nhan_hang">Nhận hàng trong vòng 2 giờ làm việc</string>
    <string name="tien_hang_tam_tinh">Tiền hàng (Tạm tính):</string>
    <string name="phi_giao_hang">Phí giao hàng:</string>
    <string name="hinh_thuc_thanh_toan">Phương thức thanh toán</string>
    <string name="hinh_thuc_nhan_hang">Hình thức nhận hàng</string>
    <string name="huy">Hủy</string>
    <string name="thanh_toan_khi_nhan_hang">Thanh toán khi nhận hàng</string>
    <string name="dat_hang">Đặt hàng </string>
    <string name="vui_long_giu_dien_thoai">Vui lòng giữ điện thoại, nhân viên chúng tôi sẽ gọi xác nhận đơn hàng của bạn!</string>
    <string name="thanh_cong">Thành công</string>
    <string name="tiep_tuc_mua_sam">Tiếp tục mua sắm</string>
    <string name="tong_tien">Tổng tiền:</string>
    <string name="san_pham">sản phẩm</string>
    <string name="id">ID: </string>
    <string name="mau">Màu sắc:</string>
    <string name="dl">Dung lượng:</string>
    <string name="kha_nang_luu_tru">Khả năng lưu trữ: </string>
    <string name="nhom_mau">Nhóm màu: </string>
    <string name="so_luong">Số lượng:</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="thong_bao">Thông báo</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="tim_chiec_dien_thoai">Tìm chiếc điện thoại bạn cần</string>
    <string name="cart">Cart</string>
    <string name="sua">Sửa</string>
    <string name="otp_fail">Mã OTP không hợp lệ vui lòng thử lại sau</string>
    <string name="payment_cash">Thanh toán khi nhận hàng</string>
    <string name="payment_zalopay">Thanh toán ZaloPay</string>
    <string name="shipping_store">Nhận tại cửa hàng</string>
    <string name="shipping_at_home">Giao hàng tận nơi</string>
    <string name="edittext_hint"><font size="14">Nhập phản hồi</font></string>
    <string name="back_exit">Nhấn back 1 lần nữa để thoát</string>
    <string name="pro_coming_soon">Hàng sắp về</string>
    <string name="pro_sold_out">Tạm hết hàng</string>
    <string name="sold_out">Một số sản phẩm hiện tạm thời hết hàng\nVui lòng thử lại sau</string>
</resources>