<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ctrlOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctrlMyOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ctrlAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="32dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/icon_map" />

                    <TextView
                        android:id="@+id/tvOrderNameUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="@+id/imageView" />

                    <TextView
                        android:id="@+id/tvOrderPhoneUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/dray"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/tvOrderNameUser"
                        app:layout_constraintTop_toTopOf="@+id/tvOrderNameUser" />

                    <TextView
                        android:id="@+id/tvOrderAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:textAlignment="viewStart"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tvOrderNameUser"
                        app:layout_constraintTop_toBottomOf="@+id/tvOrderNameUser" />

                    <TextView
                        android:id="@+id/tvChangeInfo"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/sua"
                        android:textAlignment="center"
                        android:textColor="@color/dray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvOrderNCC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/kien_hang_cua_ban"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/cvAddress"
                app:layout_constraintTop_toBottomOf="@+id/cvAddress" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOrderProduct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:theme="@style/RecyclerView"
                app:layout_constraintEnd_toEndOf="@+id/cvAddress"
                app:layout_constraintStart_toStartOf="@+id/tvOrderNCC"
                app:layout_constraintTop_toBottomOf="@+id/tvOrderNCC" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvFeeShip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toBottomOf="@+id/rvOrderProduct">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ctrlFeeShip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvCateShip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/giao_hang_nhanh"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/ctrlFeeShip"
                        app:layout_constraintTop_toTopOf="@id/ctrlFeeShip" />

                    <TextView
                        android:id="@+id/tvShip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/free_ship"
                        android:textColor="@color/red"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="@id/ctrlFeeShip"
                        app:layout_constraintTop_toTopOf="@+id/tvCateShip" />

                    <ImageView
                        android:id="@+id/ivShip"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginBottom="16dp"
                        android:src="@drawable/ic_ship"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tvCateShip"
                        app:layout_constraintTop_toBottomOf="@id/tvCateShip" />

                    <TextView
                        android:id="@+id/tvInfoReceive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/nhan_hang"
                        app:layout_constraintBottom_toBottomOf="@+id/ivShip"
                        app:layout_constraintStart_toEndOf="@+id/ivShip"
                        app:layout_constraintTop_toTopOf="@+id/ivShip" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/viewBottom"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/dray"
                app:layout_constraintEnd_toEndOf="@+id/cvFeeShip"
                app:layout_constraintStart_toStartOf="@+id/cvFeeShip"
                app:layout_constraintTop_toBottomOf="@+id/cvFeeShip" />

            <TextView
                android:id="@+id/tvOrderTotal1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tien_hang_tam_tinh"
                android:textColor="@color/dray"
                app:layout_constraintStart_toStartOf="@+id/viewBottom"
                app:layout_constraintTop_toBottomOf="@+id/btnOrderPay" />

            <TextView
                android:id="@+id/tvOrderTotalMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/viewBottom"
                app:layout_constraintTop_toTopOf="@+id/tvOrderTotal1" />

            <TextView
                android:id="@+id/tvOrderShip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/phi_giao_hang"
                android:textColor="@color/dray"
                app:layout_constraintStart_toStartOf="@id/tvOrderTotal1"
                app:layout_constraintTop_toBottomOf="@id/tvOrderTotal1" />

            <TextView
                android:id="@+id/tvOrderFeeShip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_ship"
                app:layout_constraintEnd_toEndOf="@+id/tvOrderTotalMoney"
                app:layout_constraintTop_toTopOf="@+id/tvOrderShip" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOrderPay"
                style="@style/ButtonStyleIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hinh_thuc_thanh_toan"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/viewBottom" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancelOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@color/blue"
                android:text="@string/huy"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/tvOrderFeeShip"
                app:layout_constraintStart_toStartOf="@+id/tvOrderShip"
                app:layout_constraintTop_toBottomOf="@+id/tvOrderFeeShip" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="6dp"
                android:text="@string/thanh_toan_khi_nhan_hang"
                android:textStyle="italic"
                android:translationZ="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/btnOrderPay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnOrderPay" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctrlOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/viewEnd"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tvOrderTotal3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/tong_cong"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tvOrderTotalMoneyFinish"
            app:layout_constraintTop_toTopOf="@id/tvOrderTotalMoneyFinish" />

        <TextView
            android:id="@+id/tvOrderTotalMoneyFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="@color/red"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/ctrlOrder"
            app:layout_constraintEnd_toEndOf="@+id/glOrder"
            app:layout_constraintTop_toTopOf="@id/ctrlOrder" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOrderFinish"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/blue"
            android:text="@string/dat_hang"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/glOrder" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>